# AdmiralSquidstatAPI

./: CommunityGuidelines.md  README.md
SquidstatLibrary/: CMakeLists.txt
SquidstatLibrary/Linux/: install_dependencies.sh
SquidstatLibrary/examples/: CMakeLists.txt
SquidstatLibrary/examples/AcExperimentDemo/: CMakeLists.txt  main.cpp
SquidstatLibrary/examples/AutoFirmwareUpdateDemo/: AutoFirmwareUpdate.cpp  CMakeLists.txt
SquidstatLibrary/examples/BasicDemo/: 1_basicDemo.cpp  CMakeLists.txt  name.txt
SquidstatLibrary/examples/C++/: CMakeLists.txt
SquidstatLibrary/examples/C++/advancedControlFlow/: CMakeLists.txt  advancedControlFlow.cpp
SquidstatLibrary/examples/C++/advancedExperiment/: CMakeLists.txt  advancedExperiment.cpp
SquidstatLibrary/examples/C++/basicExperiment/: CMakeLists.txt  basicExperiment.cpp
SquidstatLibrary/examples/C++/dataOutput/: CMakeLists.txt  dataOutput.cpp
SquidstatLibrary/examples/C++/firmwareUpdate/: CMakeLists.txt  firmwareUpdate.cpp
SquidstatLibrary/examples/C++/linkedChannels/: CMakeLists.txt  linkedChannels.cpp
SquidstatLibrary/examples/C++/manualExperiment/: CMakeLists.txt  manualExperiment.cpp
SquidstatLibrary/examples/C++/nonblockingExperiment/: CMakeLists.txt  nonblockingExperiment.cpp
SquidstatLibrary/examples/C++/pulseData/: CMakeLists.txt  pulseData.cpp
SquidstatLibrary/examples/ControlFlowDemo/: 2_controlFlowDemo.cpp  CMakeLists.txt
SquidstatLibrary/examples/DataOutputToCSVDemo/: CMakeLists.txt  DataOutputToCSVDemo.cpp
SquidstatLibrary/examples/FirmwareUpdateDemo/: CMakeLists.txt  main.cpp
SquidstatLibrary/examples/ManualExperimentDemo/: CMakeLists.txt  main.cpp
SquidstatLibrary/examples/NonBlockTestDemo/: CMakeLists.txt  main.cpp
SquidstatLibrary/examples/Python/: advancedExperiment.py  async.py  basicExperiment.py  dataOutput.py  firmwareUpdate.py  linkedChannels.py  manualExperiment.py  nonblockingExperiment.py  pulseData.py  writeInCsv.py
SquidstatLibrary/examples/Python/RemoteSquidstatExample/: tcpClient.py  tcpServer.py
docs/: _ais_abstract_element_8h_source.html  _ais_battery_capacity_element_8h_source.html  _ais_comp_range_8h_source.html  _ais_constant_current_element_8h_source.html  _ais_constant_pot_element_8h_source.html  _ais_constant_power_element_8h_source.html  _ais_constant_resistance_element_8h_source.html  _ais_custom_experiment_8h_source.html  _ais_cyclic_voltammetry_element_8h_source.html  _ais_d_c_current_sweep_element_8h_source.html  _ais_d_c_potential_sweep_element_8h_source.html  _ais_data_manipulator_8h_source.html  _ais_data_points_8h_source.html  _ais_device_tracker_8h_source.html  _ais_diff_pulse_voltammetry_element_8h_source.html  _ais_e_i_s_galvanostatic_element_8h_source.html  _ais_e_i_s_potentiostatic_element_8h_source.html  _ais_error_code_8h_source.html  _ais_experiment_8h_source.html  _ais_instrument_handler_8h_source.html  _ais_manipulator_type_8h_source.html  _ais_mott_schottky_element_8h_source.html  _ais_normal_pulse_voltammetry_element_8h_source.html  _ais_open_circuit_element_8h_source.html  _ais_square_wave_voltammetry_element_8h_source.html  _ais_squidstat_global_8h_source.html  _ais_staircase_potential_voltammetry_element_8h_source.html  _ais_stepped_current_element_8h_source.html  _ais_stepped_voltage_element_8h_source.html  _setup_lab_v_i_e_w.html  advanced_control_flow_8cpp-example.html  advanced_experiment_8cpp-example.html  advanced_experiment_8py-example.html  annotated.html  annotated.js  annotated_dup.js  async_8py-example.html  basic_experiment_8cpp-example.html  basic_experiment_8py-example.html  basics.html  (+221 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+49 more)
(+127 files in other folders)
